compiler/tests/snapshots/parse_success__regex_simple.snap
---
source: compiler/tests/parse_success.rs
expression: /space/
---

=== Source ===
/space/

=== Tokens ===
[
    ForwardSlash(
        0,
        1,
    ),
    Identifier(
        1,
        6,
    ),
    ForwardSlash(
        6,
        7,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        7,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                7,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        0,
                        7,
                    ),
                    kind: RegExpr(
                        RegExprNode {
                            pos: (
                                1,
                                6,
                            ),
                            kind: CharacterClass(
                                "space",
                            ),
                        },
                    ),
                    typ: Unknown,
                },
            ),
        },
    ],
}

