compiler/tests/snapshots/parse_success__string_emoji_3.snap
---
source: compiler/tests/parse_success.rs
expression: "\"🏳️‍🌈\""
---

=== Source ===
"🏳️‍🌈"

=== Tokens ===
[
    StringLiteral(
        1,
        15,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        1,
        15,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                1,
                15,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        1,
                        15,
                    ),
                    kind: Literal(
                        LiteralNode {
                            pos: (
                                1,
                                15,
                            ),
                            kind: Str(
                                "🏳\u{fe0f}\u{200d}🌈",
                            ),
                        },
                    ),
                    typ: Unknown,
                },
            ),
        },
    ],
}

