compiler/tests/snapshots/parse_success__string_escape_backslash.snap
---
source: compiler/tests/parse_success.rs
expression: "\"part 1\\\\part 2\""
---

=== Source ===
"part 1\\part 2"

=== Tokens ===
[
    StringLiteral(
        1,
        15,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        1,
        15,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                1,
                15,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        1,
                        15,
                    ),
                    kind: Literal(
                        LiteralNode {
                            pos: (
                                1,
                                15,
                            ),
                            kind: Str(
                                "part 1\\part 2",
                            ),
                        },
                    ),
                    typ: Unknown,
                },
            ),
        },
    ],
}

