compiler/tests/snapshots/parse_success__tuple_empty_across_lines.snap
---
source: compiler/tests/parse_success.rs
expression: "(\n\n)"
---

=== Source ===
(

)

=== Tokens ===
[
    LeftParen(
        0,
        1,
    ),
    LineBreak(
        1,
        2,
    ),
    LineBreak(
        2,
        3,
    ),
    RightParen(
        3,
        4,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        4,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                4,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        0,
                        4,
                    ),
                    kind: EmptyTuple,
                    typ: Unknown,
                },
            ),
        },
    ],
}

