compiler/tests/snapshots/parse_success__type_alias_generic_constraints.snap
---
source: compiler/tests/parse_success.rs
expression: "alias CoolFunc<A> where A :: Any\n  { (A, Int) -> Cool }"
---

=== Source ===
alias CoolFunc<A> where A :: Any
  { (A, Int) -> Cool }

=== Tokens ===
[
    KeywordAlias(
        0,
        5,
    ),
    Identifier(
        6,
        14,
    ),
    LeftAngle(
        14,
        15,
    ),
    Identifier(
        15,
        16,
    ),
    RightAngle(
        16,
        17,
    ),
    KeywordWhere(
        18,
        23,
    ),
    Identifier(
        24,
        25,
    ),
    DoubleColon(
        26,
        28,
    ),
    Identifier(
        29,
        32,
    ),
    LineBreak(
        32,
        33,
    ),
    LeftBrace(
        35,
        36,
    ),
    LeftParen(
        37,
        38,
    ),
    Identifier(
        38,
        39,
    ),
    Comma(
        39,
        40,
    ),
    Identifier(
        41,
        44,
    ),
    RightParen(
        44,
        45,
    ),
    Arrow(
        46,
        48,
    ),
    Identifier(
        49,
        53,
    ),
    RightBrace(
        54,
        55,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        55,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                55,
            ),
            kind: TypeDef(
                TypeDefNode {
                    pos: (
                        0,
                        55,
                    ),
                    kind: Alias {
                        of: TypeExprNode {
                            pos: (
                                35,
                                55,
                            ),
                            kind: Func(
                                TypeExprNode {
                                    pos: (
                                        37,
                                        45,
                                    ),
                                    kind: Tuple(
                                        [
                                            TypeExprNode {
                                                pos: (
                                                    38,
                                                    39,
                                                ),
                                                kind: Single(
                                                    TypeIdentifierNode {
                                                        pos: (
                                                            38,
                                                            39,
                                                        ),
                                                        name: "A",
                                                        generics: [],
                                                    },
                                                ),
                                                typ: Unknown,
                                            },
                                            TypeExprNode {
                                                pos: (
                                                    41,
                                                    44,
                                                ),
                                                kind: Single(
                                                    TypeIdentifierNode {
                                                        pos: (
                                                            41,
                                                            44,
                                                        ),
                                                        name: "Int",
                                                        generics: [],
                                                    },
                                                ),
                                                typ: Unknown,
                                            },
                                        ],
                                    ),
                                    typ: Unknown,
                                },
                                TypeExprNode {
                                    pos: (
                                        49,
                                        53,
                                    ),
                                    kind: Single(
                                        TypeIdentifierNode {
                                            pos: (
                                                49,
                                                53,
                                            ),
                                            name: "Cool",
                                            generics: [],
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ),
                            typ: Unknown,
                        },
                    },
                    name: TypeIdentifierNode {
                        pos: (
                            6,
                            17,
                        ),
                        name: "CoolFunc",
                        generics: [
                            TypeExprNode {
                                pos: (
                                    15,
                                    16,
                                ),
                                kind: Single(
                                    TypeIdentifierNode {
                                        pos: (
                                            15,
                                            16,
                                        ),
                                        name: "A",
                                        generics: [],
                                    },
                                ),
                                typ: Unknown,
                            },
                        ],
                    },
                    generic_type_constraints: [
                        (
                            IdentifierNode {
                                pos: (
                                    24,
                                    25,
                                ),
                                name: "A",
                            },
                            TypeIdentifierNode {
                                pos: (
                                    29,
                                    32,
                                ),
                                name: "Any",
                                generics: [],
                            },
                        ),
                    ],
                },
            ),
        },
    ],
}

