compiler/tests/snapshots/parse_success__type_alias_same_line.snap
---
source: compiler/tests/parse_success.rs
expression: alias Alpha Beta
---

=== Source ===
alias Alpha Beta

=== Tokens ===
[
    KeywordAlias(
        0,
        5,
    ),
    Identifier(
        6,
        11,
    ),
    Identifier(
        12,
        16,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        0,
        16,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                0,
                16,
            ),
            kind: TypeDef(
                TypeDefNode {
                    pos: (
                        0,
                        16,
                    ),
                    kind: Alias {
                        of: TypeExprNode {
                            pos: (
                                12,
                                16,
                            ),
                            kind: Single(
                                TypeIdentifierNode {
                                    pos: (
                                        12,
                                        16,
                                    ),
                                    name: "Beta",
                                    generics: [],
                                },
                            ),
                            typ: Unknown,
                        },
                    },
                    name: TypeIdentifierNode {
                        pos: (
                            6,
                            11,
                        ),
                        name: "Alpha",
                        generics: [],
                    },
                    generic_type_constraints: [],
                },
            ),
        },
    ],
}

